# calslop

./: .gitignore  README.md  install.sh  update.sh
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/controllers/: events.py  sources.py  todos.py
backend/app/db/: __init__.py  app_config_store.py  sources_store.py
backend/app/models/: __init__.py  dtos.py
backend/app/routes/: __init__.py  alerts_parse.py  datetime_parse.py  delta_parse.py  events.py  notifications.py  recurrence_parse.py  sources.py  todos.py  ui_settings.py  utils.py
backend/app/services/: aggregator.py  human_alerts.py  human_datetime.py  human_delta.py  human_recurrence.py  ical_cache.py  ical_recurrence.py  ical_utils.py
backend/app/services/notifications/: __init__.py  scheduler.py
backend/app/services/notifications/senders/: __init__.py  base.py  email.py  factory.py  notify_send.py  webhook.py
backend/app/services/sources/: __init__.py  base.py  caldav_client.py  ics_url.py  local_folder.py
backend/scripts/: benchmark_recurrence_profile.py  normalize_vdirsyncer_ics_to_utc.py
backend/tests/: test_app_config_store.py  test_event_recurrence.py  test_ical_serialization_utc.py  test_main_scheduler_startup.py  test_normalize_vdirsyncer_ics_to_utc_script.py  test_notification_sender_factory.py  test_notifications_routes.py  test_notifications_scheduler.py  test_notify_send_sender.py  test_sources_store_preserves_notifications.py  test_todo_categories_ical.py  test_todo_recurrence_perf.py  test_ui_settings_routes.py
frontend/: package-lock.json  package.json  (+2 more)
(+22 files in other folders)
