[project]
name = "calslop-backend"
version = "0.1.0"
description = "Calslop organizer API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "icalendar>=5.0",
    "caldav>=1.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "parsedatetime>=2.6",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
